# python-yeelight

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  MANIFEST.in  README.md  README.rst  flit.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  devices.rst  index.rst  yeelight.rst
examples/: async_reader.py  music_mode_test.py
yeelight/: __init__.py  aio.py  decorator.py  enums.py  flow.py  flows.py  main.py  metadata.py  ssdp_discover.py  tests.py  transitions.py  utils.py  version.py
