[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yeelight"
version = "0.7.14"
dynamic = ["description"]
readme = "README.md"
requires-python = ">=3.4"
license = {file = "LICENSE"}
authors = [
    {name = "Stavros Korokithakis", email = "hi@stavros.io"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "future",
    "ifaddr",
    "importlib_metadata; python_version<'3.8'",
    "async-timeout; python_version<'3.11'"
]

[project.urls]
Homepage = "https://gitlab.com/stavros/python-yeelight"

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-tidy-imports",
    "pep8-naming",
    "Sphinx",
    "sphinx-rtd-theme",
]

[tool.ruff]
select = ["E", "F", "D"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D105",
  "D106",
  "D107",
  "D203",
  "D212",
  "D214",
  "D401",
  "D417",
  "D407",
  "E501",
]

[tool.ruff.per-file-ignores]
"yeelight/aio.py" = ["D401"]
